--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ buildscript {
     ext {
         gradleVersion = '3.1.4'
         roomVersion = '2.0.0-rc01'
-        appcompatVersion = '1.0.0-rc01'
+        jetpackVersion = '1.0.0-rc01'
+        constraintLayoutVersion = '1.1.2'
+        picassoVersion = '2.71828'
+        retrofitVersion = '2.4.0'
     }
 
 
