--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext {
         gradleVersion = '3.1.4'
         roomVersion = '2.0.0-rc01'
+        lifecycleVersion = '2.0.0-rc01'
         jetpackVersion = '1.0.0-rc01'
         constraintLayoutVersion = '1.1.2'
         picassoVersion = '2.71828'
